@@ -48,8 +48,9 @@ static CONFIG Vars[] = {
 #if HAVE_LIBZ
     { "compression_level", VAR_TYPE_INT, UL &Compression_Level, 1 },
     { "compression_threshold", VAR_TYPE_INT, UL &Compression_Threshold, 8192 },
-    { "max_compress", VAR_TYPE_INT, UL &Max_Compress, 5 }
+    { "max_compress", VAR_TYPE_INT, UL &Max_Compress, 5 },
 #endif
+    { "max_shared", VAR_TYPE_INT, UL &Max_Shared, 5000 },
 };
 
 static int Vars_Size = sizeof (Vars) / sizeof (CONFIG);
