@@ -11,7 +11,8 @@
 #server_name localhost
 
 # the password for linking this server to other servers (no default)
-server_password opensource
+#server_password opensource
+server_password mmmdonut
 
 # port to listen on for client connections (defaults to 8888)
 #server_port 8888
@@ -47,6 +48,9 @@ db_pass passtest
 
 # maximum number of results returned for a search (default: 100)
 #max_results 500
+
+# maximum number of files a user is allowed to share (default: 5000)
+#max_shared 1000
 
 ###
 ### SQL Database config.
